--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,12 @@
     file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.powsybl</groupId>
     <artifactId>powsybl-core</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.0-repas-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>powsybl</name>
@@ -86,7 +84,7 @@
         <maven.coveralls.version>4.3.0</maven.coveralls.version>
         <maven.dependency.version>3.0.1</maven.dependency.version>
         <maven.deploy.version>2.8.2</maven.deploy.version>
-        <maven.findbugs.version>3.0.4</maven.findbugs.version>
+        <maven.findbugs.version>3.0.5</maven.findbugs.version>
         <maven.gpg.version>1.6</maven.gpg.version>
         <maven.jacoco.version>0.7.8</maven.jacoco.version>
         <maven.jar.version>3.0.2</maven.jar.version>
@@ -110,7 +108,7 @@
         <arquillianbom.version>1.2.0.Final</arquillianbom.version>
         <autoservice.version>1.0-rc2</autoservice.version>
         <commonscli.version>1.3.1</commonscli.version>
-        <commonscompress.version>1.13</commonscompress.version>
+        <commonscompress.version>1.14</commonscompress.version>
         <commonsio.version>2.5</commonsio.version>
         <commonslang3.version>3.4</commonslang3.version>
         <commonsmath3.version>3.6.1</commonsmath3.version>
@@ -141,7 +139,7 @@
         <swaggerjaxrs.version>1.5.16</swaggerjaxrs.version>
         <threeten.version>1.0</threeten.version>
         <trove4j.version>3.0.3</trove4j.version>
-        <truevfs.version>0.11.1</truevfs.version>
+        <truevfs.version>0.12.0</truevfs.version>
         <tyrus.version>1.13.1</tyrus.version>
         <wildfly.dist.version>11.0.0.Final</wildfly.dist.version>
         <wildflyarquilliancontainerembedded.version>2.1.0.Final</wildflyarquilliancontainerembedded.version>
