--- a/afs/afs-ws/afs-ws-server/pom.xml
+++ b/afs/afs-ws/afs-ws-server/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-afs-ws</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.0-repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-afs-ws-server</artifactId>
