--- a/sensitivity-api/pom.xml
+++ b/sensitivity-api/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-core</artifactId>
-        <version>2.1.0</version>
+        <version>2.1.0-repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-sensitivity-api</artifactId>
