--- a/time-series/pom.xml
+++ b/time-series/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>powsybl-core</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>2.1.0</version>
+        <version>2.1.0-repas-SNAPSHOT</version>
     </parent>
 
     <packaging>pom</packaging>
