--- a/action/action-simulator/pom.xml
+++ b/action/action-simulator/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-action</artifactId>
-        <version>1.1.0-repas-SNAPSHOT</version>
+        <version>1.1.0repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-action-simulator</artifactId>
