--- a/afs/afs-ws/afs-ws-server-utils/pom.xml
+++ b/afs/afs-ws/afs-ws-server-utils/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-afs-ws</artifactId>
-        <version>1.1.0-repas-SNAPSHOT</version>
+        <version>1.1.0repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-afs-ws-server-utils</artifactId>
