--- a/ampl-converter/pom.xml
+++ b/ampl-converter/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-core</artifactId>
-        <version>1.1.0-repas-SNAPSHOT</version>
+        <version>1.1.0repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-ampl-converter</artifactId>
