--- a/cim1/cim1-model/pom.xml
+++ b/cim1/cim1-model/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-cim1</artifactId>
-        <version>1.1.0-repas-SNAPSHOT</version>
+        <version>1.1.0repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-cim1-model</artifactId>
