--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.powsybl</groupId>
     <artifactId>powsybl-core</artifactId>
-    <version>1.1.0-repas-SNAPSHOT</version>
+    <version>1.1.0repas-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>powsybl</name>
@@ -75,6 +75,7 @@
 
         <java.version>1.8</java.version>
 
+	<maven.specificproject>-repas</maven.specificproject>
         <maven.antrun.version>1.8</maven.antrun.version>
         <maven.assembly.version>3.0.0</maven.assembly.version>
         <maven.build-helper.version>3.0.0</maven.build-helper.version>
