--- a/security-analysis/security-analysis-afs/pom.xml
+++ b/security-analysis/security-analysis-afs/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-security-analysis</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>1.1.0-repas-SNAPSHOT</version>
+        <version>1.1.0repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-security-analysis-afs</artifactId>
