--- a/afs/afs-network/afs-network-server/pom.xml
+++ b/afs/afs-network/afs-network-server/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-afs-network</artifactId>
-        <version>1.1.0repas-SNAPSHOT</version>
+        <version>repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-afs-network-server</artifactId>
