--- a/afs/afs-storage-api/pom.xml
+++ b/afs/afs-storage-api/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-afs</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>1.1.0repas-SNAPSHOT</version>
+        <version>repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-afs-storage-api</artifactId>
