--- a/contingency-api/pom.xml
+++ b/contingency-api/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-core</artifactId>
-        <version>repas-SNAPSHOT</version>
+        <version>1.1.0-repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-contingency-api</artifactId>
