--- a/iidm/iidm-impl/pom.xml
+++ b/iidm/iidm-impl/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-iidm</artifactId>
-        <version>repas-SNAPSHOT</version>
+        <version>1.1.0-repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-iidm-impl</artifactId>
