--- a/iidm/iidm-util/pom.xml
+++ b/iidm/iidm-util/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <artifactId>powsybl-iidm</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>repas-SNAPSHOT</version>
+        <version>1.1.0-repas-SNAPSHOT</version>
     </parent>
 
 
