--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.powsybl</groupId>
     <artifactId>powsybl-core</artifactId>
-    <version>repas-SNAPSHOT</version>
+    <version>1.1.0-repas-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>powsybl</name>
