--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-core</artifactId>
 	<groupId>com.powsybl</groupId>
-	<version>repas-SNAPSHOT</version>
+	<version>1.1.0-repas-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-tools</artifactId>
