Afs ws authentication (#341)
AFS Authentication

--- a/afs/afs-ws/afs-ws-server-utils/pom.xml
+++ b/afs/afs-ws/afs-ws-server-utils/pom.xml
@@ -29,6 +29,16 @@
             <artifactId>powsybl-afs-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-afs-ws-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
 
         <!-- Provided dependencies -->
         <dependency>
