--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
         <maven.coveralls.version>4.3.0</maven.coveralls.version>
         <maven.dependency.version>3.1.1</maven.dependency.version>
         <maven.deploy.version>2.8.2</maven.deploy.version>
+        <maven.enforcer.version>3.0.0-M2</maven.enforcer.version>
         <maven.findbugs.version>3.0.5</maven.findbugs.version>
         <maven.gpg.version>1.6</maven.gpg.version>
         <maven.jacoco.version>0.8.1</maven.jacoco.version>
@@ -112,7 +113,7 @@
         <arquillianbom.version>1.2.0.Final</arquillianbom.version>
         <autoservice.version>1.0-rc2</autoservice.version>
         <commonscli.version>1.3.1</commonscli.version>
-        <commonscompress.version>1.13</commonscompress.version>
+        <commonscompress.version>1.14</commonscompress.version>
         <commonsio.version>2.5</commonsio.version>
         <commonslang3.version>3.4</commonslang3.version>
         <commonsmath3.version>3.6.1</commonsmath3.version>
@@ -143,7 +144,7 @@
         <swaggerjaxrs.version>1.5.16</swaggerjaxrs.version>
         <threeten.version>1.0</threeten.version>
         <trove4j.version>3.0.3</trove4j.version>
-        <truevfs.version>0.11.1</truevfs.version>
+        <truevfs.version>0.12.0</truevfs.version>
         <tyrus.version>1.13.1</tyrus.version>
         <wildfly.dist.version>11.0.0.Final</wildfly.dist.version>
         <wildflyarquilliancontainerembedded.version>2.1.0.Final</wildflyarquilliancontainerembedded.version>
@@ -370,6 +371,25 @@
                                     <failsOnError>true</failsOnError>
                                     <excludes>**/generated/**/*,cim1/**</excludes>
                                     <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <version>${maven.enforcer.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <fail>false</fail>
+                                    <rules>
+                                        <dependencyConvergence/>
+                                    </rules>
                                 </configuration>
                             </execution>
                         </executions>
