--- a/itools-plugin/pom.xml
+++ b/itools-plugin/pom.xml
@@ -13,16 +13,21 @@
     <name>iTools Maven plugin</name>
     <packaging>maven-plugin</packaging>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.5.2</version>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
-            <artifactId>maven-plugin-api</artifactId>
-            <version>3.5.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-project</artifactId>
-            <version>3.0-alpha-2</version>
+            <artifactId>maven-core</artifactId>
+            <version>3.3.9</version>
         </dependency>
 
         <dependency>
