--- a/itools-packager/pom.xml
+++ b/itools-packager/pom.xml
@@ -17,9 +17,9 @@
         <version>1.2.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>powsybl-itools-maven-plugin</artifactId>
-    <name>iTools Maven plugin</name>
-    <description>iTools Maven plugin</description>
+    <artifactId>powsybl-itools-packager-maven-plugin</artifactId>
+    <name>iTools packager Maven plugin</name>
+    <description>iTools packager Maven plugin</description>
     <packaging>maven-plugin</packaging>
 
     <build>
