--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
         <module>distribution-core</module>
         <module>entsoe-util</module>
         <module>iidm</module>
-        <module>itools-plugin</module>
+        <module>itools-packager</module>
         <module>loadflow</module>
         <module>math</module>
         <module>scripting</module>
@@ -85,7 +85,6 @@
         <maven.buildnumber.version>1.4</maven.buildnumber.version>
         <maven.checkstyle.version>3.0.0</maven.checkstyle.version>
         <maven.compiler.version>3.7.0</maven.compiler.version>
-        <maven.core.version>3.3.9</maven.core.version>
         <maven.coveralls.version>4.3.0</maven.coveralls.version>
         <maven.dependency.version>3.1.1</maven.dependency.version>
         <maven.deploy.version>2.8.2</maven.deploy.version>
@@ -95,7 +94,6 @@
         <maven.jacoco.version>0.8.1</maven.jacoco.version>
         <maven.jar.version>3.1.0</maven.jar.version>
         <maven.javadoc.version>3.0.1</maven.javadoc.version>
-        <maven.plugin.annotations.version>3.5.2</maven.plugin.annotations.version>
         <maven.plugin.version>3.5.2</maven.plugin.version>
         <maven.shade.version>3.1.1</maven.shade.version>
         <maven.source.version>3.0.1</maven.source.version>
@@ -135,6 +133,8 @@
         <junit.version>4.12</junit.version>
         <logback.version>1.1.8</logback.version>
         <mapdb.version>3.0.3</mapdb.version>
+        <maven.core.version>3.3.9</maven.core.version>
+        <maven.plugin.annotations.version>3.5.2</maven.plugin.annotations.version>
         <mockito.version>1.10.19</mockito.version>
         <poi.version>3.15</poi.version>
         <protobuf.version>2.5.0</protobuf.version>
