--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <module>distribution-core</module>
         <module>entsoe-util</module>
         <module>iidm</module>
+        <module>itools-packager</module>
         <module>loadflow</module>
         <module>math</module>
         <module>scripting</module>
@@ -93,6 +94,7 @@
         <maven.jacoco.version>0.8.1</maven.jacoco.version>
         <maven.jar.version>3.1.0</maven.jar.version>
         <maven.javadoc.version>3.0.1</maven.javadoc.version>
+        <maven.plugin.version>3.5.2</maven.plugin.version>
         <maven.shade.version>3.1.1</maven.shade.version>
         <maven.source.version>3.0.1</maven.source.version>
         <maven.surefire.version>2.22.0</maven.surefire.version>
@@ -131,6 +133,8 @@
         <junit.version>4.12</junit.version>
         <logback.version>1.1.8</logback.version>
         <mapdb.version>3.0.3</mapdb.version>
+        <maven.core.version>3.3.9</maven.core.version>
+        <maven.plugin.annotations.version>3.5.2</maven.plugin.annotations.version>
         <mockito.version>1.10.19</mockito.version>
         <poi.version>3.15</poi.version>
         <protobuf.version>2.5.0</protobuf.version>
