--- a/afs/afs-ws/afs-ws-utils/pom.xml
+++ b/afs/afs-ws/afs-ws-utils/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-afs-ws</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>powsybl-afs-ws-utils</artifactId>
