--- a/cim1/cim1-model/pom.xml
+++ b/cim1/cim1-model/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-cim1</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>powsybl-cim1-model</artifactId>
