--- a/afs/afs-mapdb/pom.xml
+++ b/afs/afs-mapdb/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>powsybl-afs</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>2.0.0</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-afs-mapdb</artifactId>
