Upload artefact to sonatype

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ before_install:
 script:
 - mvn --settings travis-maven.xml clean verify -Pjacoco coveralls:report sonar:sonar
 
-# after_success:
-# - [[ ${TRAVIS_PULL_REQUEST} == 'false' ]] && [[ ${TRAVIS_TAG} == '' ]] && mvn deploy -DskipTests --settings travis-maven.xml
+after_success:
+- "[[ ${TRAVIS_PULL_REQUEST} == 'false' ]] && [[ ${TRAVIS_TAG} == '' ]] && mvn --settings travis-maven.xml deploy -DskipTests"
