Upload artefact to sonatype

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,5 @@ script:
 - mvn --settings travis-maven.xml clean verify -Pjacoco coveralls:report sonar:sonar
 
 after_success:
-- "[[ ${TRAVIS_PULL_REQUEST} == 'false' ]] && [[ ${TRAVIS_TAG} == '' ]] && mvn --settings travis-maven.xml deploy -DskipTests"
+- mvn --settings travis-maven.xml deploy -DskipTests
+# - "[[ ${TRAVIS_PULL_REQUEST} == 'false' ]] && [[ ${TRAVIS_TAG} == '' ]] && mvn --settings travis-maven.xml deploy -DskipTests"
