--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
 - mvn --settings travis-maven.xml clean verify -Pjacoco coveralls:report sonar:sonar
 
 after_success:
-- mvn --settings travis-maven.xml deploy -DskipTests
+- mvn --settings travis-maven.xml deploy -DskipTests -Prelease
 # - "[[ ${TRAVIS_PULL_REQUEST} == 'false' ]] && [[ ${TRAVIS_TAG} == '' ]] && mvn --settings travis-maven.xml deploy -DskipTests"
