--- a/docs/samples/pom.xml
+++ b/docs/samples/pom.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+    Copyright (c) 2017, RTE (http://www.rte-france.com)
+    This Source Code Form is subject to the terms of the Mozilla Public
+    License, v. 2.0. If a copy of the MPL was not distributed with this
+    file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -15,8 +23,10 @@
     <modules>
         <module>count-lines-tool</module>
         <module>increase-active-power-postprocessor</module>
+		<module>importer-csv</module>
     </modules>
 
+	 
     <properties>
         <java.version>1.8</java.version>
         <maven.assembly.version>3.0.0</maven.assembly.version>
