--- a/computation-local/pom.xml
+++ b/computation-local/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-core</artifactId>
-        <version>2.1.0</version>
+        <version>2.2.0-SNAPSHOT</version>
     </parent>
     
     <artifactId>powsybl-computation-local</artifactId>
