--- a/docs/samples/csv-exporter/pom.xml
+++ b/docs/samples/csv-exporter/pom.xml
@@ -19,8 +19,8 @@
         <version>0.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>increase-active-power-postprocessor</artifactId>
-    <name>Increase active power post processor</name>
+    <artifactId>csv-exporter</artifactId>
+    <name>Export Network to CSV</name>
 
     <dependencies>
         <dependency>
@@ -30,6 +30,10 @@
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-iidm-converter-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-iidm-impl</artifactId>
         </dependency>
     </dependencies>
 
