--- a/docs/samples/csv-importer/pom.xml
+++ b/docs/samples/csv-importer/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2017, RTE (http://www.rte-france.com)
+    Copyright (c) 2018, RTE (http://www.rte-france.com)
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
     file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -16,36 +16,29 @@
     <parent>
         <artifactId>powsybl-samples</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>0.1-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>importer-csv</artifactId>
+    <artifactId>csv-importer</artifactId>
     <name>Import CSV network</name>
 
     <dependencies>
         <dependency>
-		    <groupId>net.sourceforge.javacsv</groupId>
-			<artifactId>javacsv</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.auto.service</groupId>
-			<artifactId>auto-service</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.powsybl</groupId>
-			<artifactId>powsybl-iidm-converter-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.powsybl</groupId>
-			<artifactId>powsybl-iidm-impl</artifactId>
-			<version>2.1.0-SNAPSHOT</version> 		
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+            <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-iidm-converter-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-iidm-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
